cmake_minimum_required (VERSION 3.15)

project (Prover)

set(MY_WORKING_DIR Prover)
message(STATUS "PROJECT NAME =  ${CMAKE_PROJECT_NAME}")
message(STATUS "PROJECT SOURCE DIR =  ${PROJECT_SOURCE_DIR}")
message(STATUS "PROJECT BINARY DIR =  ${PROJECT_BINARY_DIR}")

SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/build")
SET(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/install")
file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/Prover/Engine/Runtime/Function/Render/Shader/SL/GLSL" DESTINATION ${EXECUTABLE_OUTPUT_PATH})
#set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/build/bin")
#set_target_properties(dllname PROPERTIES RUNTIME_OUTPUT_DIRECTORY ../bin)
#set(CMAKE_DEBUG_POSTFIX "_d")
#set(CMAKE_RELEASE_POSTFIX "_r")

install(DIRECTORY "${EXECUTABLE_OUTPUT_PATH}/" DESTINATION ${CMAKE_INSTALL_PREFIX})

set(CMAKE_UTILS_DIR "${CMAKE_SOURCE_DIR}/cmake")
list(INSERT CMAKE_MODULE_PATH 0 "${CMAKE_UTILS_DIR}")

include (UtilFunction)

add_subdirectory(Prover)
